force-app/main/default/objects/sugati__Questionnaire_Answer__c/sugati__Questionnaire_Answer__c.object-meta.xml
<CustomObject>
    <description>Answers submitted by clients</description>
    <label>Questionnaire Answer</label>
    <nameField>
        <displayFormat>QA-{0000000000}</displayFormat>
        <label>Questionnaire Answer ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Questionnaire Answers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>