force-app/main/default/objects/sugati__Questionnaire_Answer__c/fields/sugati__H_S_Defect_Answer__c.field-meta.xml
<CustomField>
    <fullName>sugati__H_S_Defect_Answer__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created by Appssential in October 2015 so that a report can be run on defects only.</description>
    <label>H&amp;S Defect Answer</label>
    <type>Checkbox</type>
</CustomField>