force-app/main/default/objects/sugati__Questionnaire_Answer__c/fields/sugati__Picklist_Answer__c.field-meta.xml
<CustomField>
    <fullName>sugati__Picklist_Answer__c</fullName>
    <formula>sugati__QA_Questionnaire_Answer_Option__r.Name</formula>
    <label>Picklist Answer</label>
    <type>Text</type>
</CustomField>