force-app/main/default/objects/sugati__Questionnaire_Answer__c/fields/sugati__QA_Answer__c.field-meta.xml
<CustomField>
    <fullName>sugati__QA_Answer__c</fullName>
    <label>Open Text Answer</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>