force-app/main/default/objects/sugati__Questionnaire_Answer__c/fields/sugati__QA_Other__c.field-meta.xml
<CustomField>
    <fullName>sugati__QA_Other__c</fullName>
    <label>Other</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>