force-app/main/default/objects/sugati__Questionnaire_Answer__c/fields/sugati__QA_Questionnaire__c.field-meta.xml
<CustomField>
    <fullName>sugati__QA_Questionnaire__c</fullName>
    <label>Questionnaire</label>
    <referenceTo>sugati__Questinnaire__c</referenceTo>
    <relationshipLabel>Questionnaire Answers</relationshipLabel>
    <relationshipName>Questionnaire_Answers</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>