force-app/main/default/objects/sugati__Questionnaire_Answer__c/fields/sugati__QA_Questionnaire_Answer_Option__c.field-meta.xml
<CustomField>
    <fullName>sugati__QA_Questionnaire_Answer_Option__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Questionnaire Answer Option</label>
    <referenceTo>sugati__Questionnaire_Answer_Options__c</referenceTo>
    <relationshipLabel>Questionnaire Answers</relationshipLabel>
    <relationshipName>Questionnaire_Answers</relationshipName>
    <type>Lookup</type>
</CustomField>