force-app/main/default/objects/sugati__Questionnaire_Answer__c/fields/sugati__QA_Questionnaire_Question__c.field-meta.xml
<CustomField>
    <fullName>sugati__QA_Questionnaire_Question__c</fullName>
    <label>Questionnaire Question</label>
    <referenceTo>sugati__Questionnaire_Question__c</referenceTo>
    <relationshipLabel>Questionnaire Answers</relationshipLabel>
    <relationshipName>Questionnaire_Answers</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>