force-app/main/default/objects/sugati__Questionnaire_Answer__c/fields/sugati__QA_Supplier_Booking__c.field-meta.xml
<CustomField>
    <fullName>sugati__QA_Supplier_Booking__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Supplier Booking</label>
    <referenceTo>sugati__Supplier_Booking__c</referenceTo>
    <relationshipLabel>Questionnaire Answers</relationshipLabel>
    <relationshipName>Questionnaire_Answers</relationshipName>
    <type>Lookup</type>
</CustomField>