force-app/main/default/objects/sugati__Questionnaire_Answer__c/fields/sugati__QQ_Translated_Answer__c.field-meta.xml
<CustomField>
    <fullName>sugati__QQ_Translated_Answer__c</fullName>
    <label>Translated Answer</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>