force-app/main/default/objects/sugati__Questionnaire_Answer__c/fields/sugati__Question_Text__c.field-meta.xml
<CustomField>
    <fullName>sugati__Question_Text__c</fullName>
    <formula>sugati__QA_Questionnaire_Question__r.sugati__QQ_Question__c</formula>
    <label>Question Text</label>
    <type>Text</type>
</CustomField>